--- a/Test2 - News/Test2.3 - News LSTM different Data/Code/collect_data.ipynb
+++ b/Test2 - News/Test2.3 - News LSTM different Data/Code/collect_data.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "import pandas as pd\n",
     "from datetime import datetime\n",
-    "from data_collector import collect_data_inkl_news, determine_trend, get_news, sentiment_int\n",
+    "from data_collector import collect_data_inkl_news, determine_trend, sentiment_int\n",
     "import os\n",
     "from ta.momentum import RSIIndicator\n",
     "from ta.trend import MACD\n",
